--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ matplotlib==3.1.3
 networkx==2.4
 numpy==1.18.1
 oauthlib==3.1.0
+opencv-contrib-python==4.4.0.44
 opencv-python==3.4.2.16
 opt-einsum==3.1.0
 pandas==1.0.3
